[project]
name = "pynenc-sample-auto-orchestration"
version = "0.1.0"
description = "Pynenc sample: automatic task orchestration with recursive Fibonacci"
requires-python = ">=3.12"
dependencies = [
    "pynenc==0.2.3rc116.dev204",
]

[dependency-groups]
dev = []

[tool.uv.sources]
pynenc = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
