[project]
name = "pynenc-sample-basic-local-threaded"
version = "0.1.0"
description = "Pynenc sample: basic local threaded execution"
requires-python = ">=3.12"
dependencies = [
    "pynenc==0.2.3rc116.dev204",
]

[dependency-groups]
dev = []

[tool.uv.sources]
pynenc = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
