[project]
name = "pynenc-sample-sync-unit-testing"
version = "0.1.0"
description = "Pynenc sample: unit testing with synchronous dev mode"
requires-python = ">=3.12"
dependencies = [
    "pynenc==0.2.3rc116.dev204",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
pynenc = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
